--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "homepage": "https://prathameshgiri.github.io/portfolio/"
+
   "name": "fusion-starter",
   "private": true,
   "type": "module",
@@ -11,6 +13,8 @@
     ]
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
     "dev": "vite",
     "build": "npm run build:client && npm run build:server",
     "build:client": "vite build",
