--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://prathameshgiri.github.io/portfolio/"
+  "homepage": "https://prathameshgiri.github.io/portfolio/",
 
   "name": "fusion-starter",
   "private": true,
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "npm run build:client && npm run build:server",
     "build:client": "vite build",
